--- a/web-page/ratchaneegorn-webpage/package.json
+++ b/web-page/ratchaneegorn-webpage/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
-    "googleapis": "^66.0.0"
+    "googleapis": "^66.0.0",
+    "mime": "^1.6.0"
   },
   "devDependencies": {},
   "scripts": {
